# edit-distance

./: .flake8  .gitignore  LICENSE  README.md  linters.sh  linters__fix.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml
editdistance/: _edit_distance_osa.cpp  _edit_distance_osa.hpp  edit_distance_osa.pyx
examples/: benchmark.py  osa_example.py
tests/: tests_osa.py
